# llmeter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: curl-testing.md  providers.md
src/llmeter/: __main__.py  app.py  app.tcss  auth.py  backend.py  config.py  models.py  provider_registry.py
src/llmeter/cli/: __init__.py  auth.py  snapshot.py
src/llmeter/providers/: __init__.py  anthropic_api.py  claude.py  claude_oauth.py  codex.py  codex_oauth.py  copilot.py  copilot_oauth.py  cursor.py  gemini.py  gemini_oauth.py  helpers.py  openai_api.py
src/llmeter/providers/api/: __init__.py  anthropic.py  base.py  openai.py  opencode.py
src/llmeter/providers/subscription/: __init__.py  base.py  claude.py  claude_login.py  claude_oauth.py  codex.py  codex_login.py  codex_oauth.py  copilot.py  copilot_login.py  copilot_oauth.py  cursor.py  cursor_auth.py  cursor_login.py  gemini.py  gemini_login.py  gemini_oauth.py  opencode_go.py
src/llmeter/widgets/: provider_card.py  usage_bar.py
src/tokeniuse/: __main__.py  app.py
src/tokeniuse/providers/: claude.py  claude_oauth.py  codex.py  codex_oauth.py
src/tokeniuse/widgets/: provider_card.py
tests/: conftest.py  test_api_billing.py  test_app_status.py  test_auth.py  test_backend.py  test_claude.py  test_cli_auth_paths.py  test_codex.py  test_config.py  test_copilot.py  test_cursor.py  test_gemini.py  test_helpers.py  test_opencode.py  test_opencode_go.py  test_snapshot_json.py
