[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmeter"
version = "0.1.0"
description = "llmeter — terminal dashboard to monitor AI coding assistant usage limits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0,<2.0",
    "rich>=13.0",
    "aiohttp>=3.9,<4.0",
]

[project.scripts]
llmeter = "llmeter.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/llmeter"]
